--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -22,6 +22,9 @@ spec:
             limits:
               memory: {{ .Values.resources.limits.memory }}
               cpu: {{ .Values.resources.limits.cpu }}
+            requests:
+              memory: {{ .Values.resources.requests.memory }}
+              cpu: {{ .Values.resources.requests.cpu}}
           env:
           - name: ortam
             value: {{ .Values.image.env.ortam }}
