--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -35,13 +35,23 @@ spec:
           - name: ETCD_ENDPOINT
             value: {{ .Values.image.env.ETCD_ENDPOINT }}
           readinessProbe:
-            tcpSocket:
+            httpGet:
+              path: /{{ .Values.ingress.path }}{{ .Values.readinessProbe.path }}
               port: {{ .Values.image.ports.port }}
-            initialDelaySeconds: 40
-            timeoutSeconds: 5
-            failureThreshold: 1
-            periodSeconds: 5
-            successThreshold: 1
+            initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
+            timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+            failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
+            successThreshold: {{ .Values.readinessProbe.successThreshold }}
+            periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+          livenessProbe:
+            httpGet:
+              path: /{{ .Values.ingress.path }}{{ .Values.livenessProbe.path }}
+              port: {{ .Values.image.ports.port }}
+            initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+            periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+            failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
+            successThreshold: {{ .Values.livenessProbe.successThreshold }}
+            timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
           ports:
             - containerPort: {{ .Values.image.ports.port }}
               name: app-port
